# internet-speed-log

./: .gitignore  LICENSE.txt  README.md  graph.bat  graph.py  instructions.txt  log_speed.py  pyproject.toml  requirements.txt  run.bat
src/internet_speed_log/: __about__.py  __init__.py  _config.py  _data.py  _ssid.py
src/internet_speed_log/_scripts/: configure.py  log.py  main.py  plot.py
